2010-03-22  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Test that uncaught exception thrown from setTimeout callback in a Worker is reported to the worker object.

        https://bugs.webkit.org/show_bug.cgi?id=31171

        * fast/workers/resources/worker-exception-in-timeout-callback.js: Added.
        * fast/workers/worker-script-error-expected.txt:
        * fast/workers/worker-script-error.html:

2010-03-22  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] REGRESSION (r56209): fast/media/print-restores-previous-mediatype.htm crashes
        https://bugs.webkit.org/show_bug.cgi?id=36386

        * platform/qt/Skipped: unskip the test as it now passes.

2010-03-21  Dmitry Gorbik  <socket.h@gmail.com>

        <http://webkit.org/b/14858> <col> width ignored when not tied to a single cell

        Reviewed by David Kilzer.

        Fixed width calculation for cells with span when <col> is defined.

        * fast/table/col-width-span-expand-expected.txt: Added.
        * fast/table/col-width-span-expand.html: Added.

2010-03-20  Martin Robinson  <mrobinson@webkit.org>

        Reviewed by Xan Lopez

        [GTK] eventSender.zoomPageOut() bug?
        https://bugs.webkit.org/show_bug.cgi?id=30575

        Unskip some tests that were failing because of the bug in DRT.

        * platform/gtk/Skipped:

2010-03-20  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations tweak.

        Remove expectations for chromium-mac editing/style/apply-through-end-of-document.html as it
        now matches platform/mac.

        * platform/chromium-mac/editing/style/apply-through-end-of-document-expected.txt: Removed.
        * platform/chromium/test_expectations.txt: Adjusted expectations.

2010-03-20  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations tweak.

        Mark editing/style/apply-through-end-of-document.html as failing
